[metadata]
name = nodecom
version = 0.0.4
author = Mikael Kunzendorf Nissen
author_email = mmkunzendorf@gmail.com
description = udp socket based communication between python3 nodes 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mKunzendorf/nodecom
project_urls =
    Bug Tracker = https://github.com/mKunzendorf/nodecom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
